Remove now unused jlink stuff (#1529)